fixed y overflow issue for bestiaire view

--- a/_sass/bestiaire.scss
+++ b/_sass/bestiaire.scss
@@ -1,5 +1,7 @@
 div.bestiaire {
-    overflow-x: hidden;
+    @include on-mobile() {
+        overflow-x: hidden;
+    }
     * {
         margin: 0;
         padding: 0;
